# ksmbd-tools

./: Makefile.am  README.md  TEST_COVERAGE_FULL_AUDIT_2026-03-04.md  claudereview2702.md  configure.ac  gptreview2702.md  ksmbd-tools.spec  ksmbd.conf.5.in  ksmbd.conf.example  ksmbd.service.in  ksmbdctl.8  ksmbdctl.8.in  ksmbdpwd.db.5  ksmbdpwd.db.5.in  meson.build  meson_options.txt
.cache/clangd/index/: adduser.c.8D91BEF9CCFBF55B.idx  asn1.c.9D3A10DC925411AD.idx  asn1.h.6C8BEDD9104262A6.idx  config_parser.c.E82354ABB9566E73.idx  config_parser.h.BA58680F3C89BEF2.idx  control.c.95A50769D0570BDD.idx  control.h.731726817D450016.idx  ipc.c.680CB30ABD26F234.idx  ipc.h.0541EF8A3F265699.idx  ksmbd_server.h.2F940FCC3683F98B.idx  main.c.E05615FFB6383097.idx  md4_hash.c.C72CAA3C035495F9.idx  md4_hash.h.71B708C90EBBB5BF.idx  mountd.c.F4EA448BBD60B1D0.idx  rpc.c.DE57CEC627FD22DA.idx  rpc.h.EA27111865785489.idx  rpc_lsarpc.c.43749147DBD00E41.idx  rpc_lsarpc.h.E254FDC07F432122.idx  rpc_samr.c.8511020D27178BDF.idx  rpc_samr.h.2DC08FAB23A886E8.idx  rpc_srvsvc.c.47A48D402BC6625D.idx  rpc_srvsvc.h.C213DAB0ED6C0350.idx  rpc_wkssvc.c.5AD262F46A829C00.idx  rpc_wkssvc.h.BC7EFDDC1B81D60F.idx  session.c.B5382A790B62D26B.idx  session.h.92BE5DBA1407C068.idx  share.h.7D57DFDFB1C2E08C.idx  share_admin.h.CD94060BE8FE9F32.idx  smbacl.c.CA976C0622759485.idx  smbacl.h.441F6876AB0E9252.idx  spnego.c.BEB55EFB84899320.idx  spnego.h.DFC4B10E3CCBE848.idx  spnego_krb5.c.3C8274C20EE048D9.idx  spnego_mech.h.2E2B7CFBE8EBE1EA.idx  test_asn1_codec.c.6508B35DD7DDF9CB.idx  test_config_parser.c.B302E9907CC82BE7.idx  test_config_parser_extended.c.F1896ADFE1D995C2.idx  test_control.c.8C3946E831291301.idx  test_ipc_handlers.c.6C5894C46AB639AE.idx  test_ipc_request_validation.c.4BB247C875D96F6E.idx  (+24 more)
.github/workflows/: c-cpp.yml
addshare/: Makefile.am  addshare.c  ksmbd.addshare.8.in  meson.build  share_admin.c  share_admin.h
adduser/: Makefile.am  adduser.c  ksmbd.adduser.8.in  md4_hash.c  meson.build  user_admin.c  user_admin.h
contrib/mdns/: ksmbd-mdns  ksmbd-mdns-configure  ksmbd-mdns-detect  ksmbd-mdns-hook  ksmbd-mdns-lib.sh  ksmbd-mdns-postinstall
contrib/mdns/init/: ksmbd-mdns.openrc  ksmbd-mdns.runit  ksmbd-mdns.service.in  ksmbd-mdns.sysv
contrib/mdns/templates/: avahi-smb.service.in  avahi-timemachine.service.in  mdnsd-ksmbd-adisk.service.in  mdnsd-ksmbd-smb.service.in  resolved-adisk.dnssd.in  resolved-smb.dnssd.in
control/: Makefile.am  control.c  control.h  ksmbd.control.8.in  meson.build
docs/plans/: 2026-02-22-mdns-postinstall-design.md  2026-02-22-mdns-postinstall-plan.md  2026-02-23-ksmbdctl-unified-cli.md
include/: asn1.h  config_parser.h  ipc.h  quic_picotls.h  rpc.h  rpc_lsarpc.h  rpc_samr.h  smbacl.h  tools.h  version.h
include/linux/: ksmbd_quic.h  ksmbd_server.h  ksmbd_server.h.bak
include/management/: session.h  share.h  spnego.h  tree_conn.h  user.h
mountd/: Makefile.am  ipc.c  ksmbd.mountd.8.in  meson.build  mountd.c  quic_picotls.c  rpc.c  rpc_lsarpc.c  rpc_samr.c  rpc_srvsvc.c  rpc_wkssvc.c  smbacl.c  worker.c
scripts/: install_ksmbd_tools_optusr.sh  uninstall_ksmbd_tools_optusr.sh
tests/: meson.build  run_ipc_handlers.sh  test_asn1_codec.c  test_config_parser.c  test_config_parser_extended.c  test_control.c  test_host_acl.c  test_integration.sh  test_ipc_compat.sh  test_ipc_handlers.c  test_ipc_request_validation.c  test_md4_kat.c  test_quic_picotls.c  test_rpc_lsarpc.c  test_rpc_ndr.c  test_rpc_pipe.c  test_rpc_samr.c  test_rpc_services.c  test_rpc_srvsvc.c  test_rpc_wkssvc.c  test_session_tree.c  test_share_admin.c  test_share_config_payload.c  test_share_management.c  test_smbacl.c  test_spnego.c  test_tap.h  test_tools_utils.c  test_user_admin.c  test_user_management.c  test_worker_ipc.c
tools/: Makefile.am  asn1.c  config_parser.c  ksmbdctl.c  ksmbdctl.tar  main.c  meson.build  tools.c
tools/management/: session.c  share.c  spnego.c  spnego_krb5.c  spnego_mech.h  tree_conn.c  user.c
